# youtube-mcp

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
docs/: ARCHITECTURE.md  FAQ.md
scripts/: release.sh
skills/youtube-watch/: SKILL.md
src/youtube_mcp/: __init__.py  _version.py  cache.py  chunk.py  clean.py  cli.py  fetch.py  mcp_server.py  models.py  service.py
tests/: test_cache.py  test_chunk.py  test_clean.py  test_fetch.py
