[project]
name = "youtube-mcp"
version = "0.1.0"
description = "Fast, minimal YouTube watch engine for AI agents — clean transcripts, no API key required."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = ["yt-dlp>=2025.1.15", "youtube-transcript-api>=1.0.0", "mcp>=1.2.0"]

[project.scripts]
yt-mcp = "youtube_mcp.cli:main"          # full CLI: info / transcript / search / segment / serve
youtube-mcp = "youtube_mcp.mcp_server:serve"  # MCP server directly (so `uvx youtube-mcp` just works)

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/youtube_mcp"]
