[project]
name = "youtube-watch-mcp"
dynamic = ["version"]                    # version comes from the latest git tag (hatch-vcs)
description = "Fast, minimal YouTube watch engine for AI agents — clean transcripts, no API key required."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = ["yt-dlp>=2025.1.15", "youtube-transcript-api>=1.0.0", "mcp>=1.2.0"]

[project.scripts]
youtube-watch-mcp = "youtube_mcp.mcp_server:serve"   # `uvx youtube-watch-mcp` -> MCP server (name == package)
youtube-watch-mcp-cli = "youtube_mcp.cli:main"       # human CLI: info / transcript / search / segment

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"                           # read version from git tag (vX.Y.Z)

[tool.hatch.build.hooks.vcs]
version-file = "src/youtube_mcp/_version.py"   # written at build; imported at runtime

[tool.hatch.build.targets.wheel]
packages = ["src/youtube_mcp"]
